# ros2-topological-mapping-navigation

./: README.md  c  generate_test_qrs.py  landmarks.yaml  robot_config.sh  start.sh  start_landmarks.sh  start_mapping.sh  start_person_follow.sh
.claude/: settings.json
ros2_ws/: requirements.txt
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/topological_nav/lib/topological_nav/: follow_manager  gesture_node  landmark_saver_node  person_follow_node  qr_display_node  qr_node  reactive_controller  set_initial_pose  speak_listener  tour_manager  tts_node
ros2_ws/install/topological_nav/share/topological_nav/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/topological_nav/share/topological_nav/config/: nav2.yaml
ros2_ws/install/topological_nav/share/topological_nav/launch/: mapping.launch.xml  person_follow.launch.py  person_follow.launch.xml  person_follow_yolo_only.launch.xml  topological_nav.launch.xml
ros2_ws/log/: latest_build
ros2_ws/src/topological_nav/: setup.cfg  setup.py
ros2_ws/src/topological_nav/launch/: localization_nav2.launch.py  person_follow.launch.xml  topological_nav.launch.xml
ros2_ws/src/topological_nav/scripts/: ros_launch_node.sh
ros2_ws/src/topological_nav/topological_nav/: follow_manager.py  gesture_node.py  landmark_saver_node.py  person_follow_node.py  qr_display_node.py  qr_node.py  set_initial_pose.py  tts_node.py
